src/objects/qvm_intuit_api_token__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>IssuedToUserId__c</fullName>
        <defaultValue>$User.Id</defaultValue>
        <description>Holds the SalesForce User ID for the person the token was issued to.   This is the user who completed the &apos;Connect to QuickBooks&apos; wizard</description>
        <label>User ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realm__c</fullName>
        <label>Realm</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenSecret__c</fullName>
        <description>The token&apos;s secret key.  This will be blank while the OAuth connect process is under way</description>
        <label>Token secret</label>
        <length>130</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>130</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UnauthorizedErrorCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times we have encountered a 401 error when using this token.  Gives an indication that it may have been invalidated</description>
        <label>Unauthorized Error Count</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValidToDate__c</fullName>
        <label>Valid to</label>
        <type>Date</type>
    </fields>
    <label>Quickbooks API Token</label>
</CustomObject>